# whisper-stt

./: .gitignore  README.md  README_rus.md  main.py  pyproject.toml
docs/: whisper-setup-guide.md  whisper-setup-guide_rus.md
